# git-analyze-demo

./: .clang_complete  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  ReadMe.md
cmake/: libgit2.cmake
cmake/modules/: ChooseMSVCCRT.cmake
docs/notes/: link4221.md
include/: Argv.hpp  Pal.hpp  argv.hpp  argvex.hpp  ax.hpp  console.hpp  finaly.hpp  git.hpp  os.hpp  string.hpp
include/details/: console_win.hpp  git.hpp  git.ipp
include/impl/: console_unix.hpp  console_win.hpp  env.hpp  git.hpp  git.ipp  os_unix.hpp  os_windows.hpp
include/impl/console_win/: adapter.hpp  adapter.ipp  console.hpp
lib/Argv/: argv.cc
lib/Pal/: CMakeLists.txt  Console.cc  Environment.cc
patch/: http-parser.patch
sources/: analyze.cc  analyze.hpp  driver.cc  environment.cc
test/: CMakeLists.txt  argvex_test.cc  argx.cc  aze.cc  consolehost.cc  env_test.cc  palenv.cc  pathcontains.cc  searchcmd.cc  treewalk.cc  tty.cc  wargv.cc
test/treewalk/: treewalk.cc
tools/: CMakeLists.txt  cmd_main.cc
tools/analyze/: CMakeLists.txt  analyze.cc  analyze.hpp  analyze_internal.h  driver.cc  environment.cc  executor.cc  executor.hpp  git-analyze.manifest  git-analyze.rc
tools/author/: ReadMe.md  author.hpp  driver.cc
tools/bareinit/: CMakeLists.txt  bareinit.manifest  main.cc
tools/cheat/: CMakeLists.txt  cheat.cc  cheat.hpp  driver.cc  git-cheat.manifest  git-cheat.rc
tools/complete/: CMakeLists.txt  commit.cc  complete.cc  complete.hpp  complete.manifest  complete.rc
tools/expire/: ReadMe.md  main.cc
tools/git-bareinit/: CMakeLists.txt  git-bareinit.manifest  git-bareinit.rc  main.cc
tools/graft/: CMakeLists.txt  graft.cc  graft.manifest  graft.rc
tools/pea/: CMakeLists.txt  driver.cc  executor.cc  executor.hpp
tools/pre-commit/: CMakeLists.txt  pre-commit.cc  pre-commit.manifest  pre-commit.rc
tools/private-email/: ReadMe.md  driver.cc  executor.cc  executor.hpp
tools/rollback/: CMakeLists.txt  driver.cc  gc.cc  git-rollback.manifest  git-rollback.rc  packbuilder.cc  packbuilder.hpp  rollback.cc  rollback.hpp
tools/update/: CMakeLists.txt  ReadMe.md  driver.cc  engine.cc  engine.hpp  executor.cc  executor.hpp  rw.json  update_test.cc
tools/update-pe/: CMakeLists.txt  driver.cc  executor.cc
