##
# tools

add_subdirectory(analyze)
add_subdirectory(rollback)
add_subdirectory(cheat)
add_subdirectory(pea) # Private email address filter, link as update hook.
add_subdirectory(pre-commit)
add_subdirectory(complete)
add_subdirectory(bareinit)
add_subdirectory(graft)
add_subdirectory(update)
